After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640163 - rtspsrc: minor leak
rtspsrc: minor leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-21 11:07 UTC by Tim-Philipp Müller
Modified: 2011-03-08 15:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for fixing leaks (1.09 KB, patch)
2011-02-07 22:37 UTC, Miguel Angel Cabrera Moya
none Details | Review

Description Tim-Philipp Müller 2011-01-21 11:07:35 UTC
$ G_SLICE=always-malloc valgrind --leak-check=yes --suppressions=../../common/gst.supp ../../../gstreamer/tools/.libs/gst-launch-0.10 rtspsrc location=rtsp://195.134.224.231/snowboard_100.wmv debug=true ! fakesink -v 


==4723== 
==4723== HEAP SUMMARY:
==4723==     in use at exit: 626,631 bytes in 3,131 blocks
==4723==   total heap usage: 141,361 allocs, 138,230 frees, 25,779,931 bytes allocated
==4723== 
==4723== 3 bytes in 1 blocks are definitely lost in loss record 2 of 2,725
==4723==    at 0x4C244E8: malloc (vg_replace_malloc.c:236)
==4723==    by 0x57AAA84: g_malloc (gmem.c:164)
==4723==    by 0x57C275D: g_strdup (gstrfuncs.c:102)
==4723==    by 0x8E6322C: gst_rtsp_message_init_response (gstrtspmessage.c:287)
==4723==    by 0x8E6711B: build_next (gstrtspconnection.c:1636)
==4723==    by 0x8E67F08: gst_rtsp_connection_receive (gstrtspconnection.c:2212)
==4723==    by 0x85DCF4D: gst_rtspsrc_connection_receive (gstrtspsrc.c:1711)
==4723==    by 0x85DDA44: gst_rtspsrc_send (gstrtspsrc.c:4305)
==4723==    by 0x8E69B9B: __gst_rtsp_marshal_ENUM__POINTER_POINTER (gstrtsp-marshal.c:86)
==4723==    by 0x511833D: g_closure_invoke (gclosure.c:767)
==4723==    by 0x51313B8: signal_emit_unlocked_R (gsignal.c:3252)
==4723==    by 0x513297B: g_signal_emit_valist (gsignal.c:2993)
==4723== 
==4723== 180 (32 direct, 148 indirect) bytes in 1 blocks are definitely lost in loss record 2,621 of 2,725
==4723==    at 0x4C244E8: malloc (vg_replace_malloc.c:236)
==4723==    by 0x57AAA84: g_malloc (gmem.c:164)
==4723==    by 0x57BFD59: g_slice_alloc (gslice.c:842)
==4723==    by 0x5778421: g_array_sized_new (garray.c:186)
==4723==    by 0x8E63245: gst_rtsp_message_init_response (gstrtspmessage.c:289)
==4723==    by 0x8E6711B: build_next (gstrtspconnection.c:1636)
==4723==    by 0x8E67F08: gst_rtsp_connection_receive (gstrtspconnection.c:2212)
==4723==    by 0x85DCF4D: gst_rtspsrc_connection_receive (gstrtspsrc.c:1711)
==4723==    by 0x85DDA44: gst_rtspsrc_send (gstrtspsrc.c:4305)
==4723==    by 0x8E69B9B: __gst_rtsp_marshal_ENUM__POINTER_POINTER (gstrtsp-marshal.c:86)
==4723==    by 0x511833D: g_closure_invoke (gclosure.c:767)
==4723==    by 0x51313B8: signal_emit_unlocked_R (gsignal.c:3252)
==4723== 
==4723== LEAK SUMMARY:
==4723==    definitely lost: 35 bytes in 2 blocks
==4723==    indirectly lost: 388 bytes in 15 blocks
==4723==      possibly lost: 0 bytes in 0 blocks
==4723==    still reachable: 30,607 bytes in 655 blocks
==4723==         suppressed: 595,601 bytes in 2,459 blocks
Comment 1 Miguel Angel Cabrera Moya 2011-02-07 22:37:14 UTC
Created attachment 180346 [details] [review]
Patch for fixing leaks
Comment 2 Wim Taymans 2011-02-14 10:46:30 UTC
commit 3cca27ced16fbcc2a93653b9db0aeffadbe275b1
Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com>
Date:   Mon Feb 7 23:32:53 2011 +0100

    rtspsrc: fix minor leaks when handling server requests.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=640163