rtspsrc: fix minor leaks when handling server requests.

https://bugzilla.gnome.org/show_bug.cgi?id=640163